recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	baisseCrayon()
	if ( steps == 0){
		return 0
	} else{
		return  spiral( steps-1, angle, lenght+incrment, increment)
		
	}
}
